@@ -16,6 +16,7 @@ Index of used prefices
 ----- - ------------------------------------------------
       - Collection
 ----- - ------------------------------------------------
+5 snn - Single linked node
 1 sci - Single linked cell list iterator
 1 scl - Single linked cell list
 1 scn - Single linked cell node
